# CryptoMathTrade

./: README.md  pyproject.toml  requirements.txt  setup.py
CryptoMathTrade/exchange/: __init__.py  _api.py  _core.py  _request.py  _response.py  errors.py  utils.py
CryptoMathTrade/exchange/ascendex/: _urls.py
CryptoMathTrade/exchange/binance/: __init__.py  _account.py  _api.py  _deserialization.py  _market.py  _serialization.py  _spot.py  _urls.py  api.py  core.py  setting.py  urls.py
CryptoMathTrade/exchange/bingx/: __init__.py  _account.py  _api.py  _deserialization.py  _market.py  _serialization.py  _spot.py  _urls.py  (+2 more)
CryptoMathTrade/old_type/: arbitrage.py  trade.py
CryptoMathTrade/trader/: __init__.py  calculate.py  price.py  trade.py  utils.py
CryptoMathTrade/type/: __init__.py  arbitrage.py  deal.py  order.py  price.py  ticker.py  trade.py
CryptoMathTrade/types/: __init__.py  account.py  arbitrage.py  balance.py  deal.py  kline.py  order.py  symbol.py  ticker.py  trade.py
converter/: __init__.py  compare.py  orderbook.py  price.py  utils.py
cryptomathtrade/exchange/: __init__.py  _api.py  _core.py  _response.py
cryptomathtrade/trader/: calculate.py  trade.py  utils.py
cryptomathtrade/types/: __init__.py  account.py  kline.py  symbol.py  ticker.py  trade.py
lib/: order.py  orderbook.py
tests/: compare_test.py  converter_test.py  exchange_test.py  order_validate.py  parser_test.py  test_ws.py  trader_test.py  types_test.py
trader/: __init__.py  price.py  trade.py  utils.py
type/: __init__.py  arbitrage.py  deal.py  order.py  utils.py
(+252 files in other folders)
