[tool.poetry]
name = "cryptomathtrade"
version = "0.5.0"
description = ""
authors = ["T_X <treider.xylioner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
requests = "^2.31.0"
pycryptodome = "^3.20.0"
websockets = "^12.0"
pydantic = "^2.5"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
