[tool.poetry]
name = "cryptomathtrade"
version = "0.7.0"
description = ""
authors = ["T_X <treider.xylioner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
requests = "^2.31.0"
pycryptodome = "^3.20.0"
websockets = "^12.0"
pydantic = "^2.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
